fixed the bug about setState being behind input value

--- a/css/Seven-Hour.scss
+++ b/css/Seven-Hour.scss
@@ -31,7 +31,7 @@
 .card-condition {
   width: 90%;
   height: 50px;
-  margin-bottom: 10px;
+  // margin-bottom: px;
 }
 
 .time,
